Add new recipes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oding Recipes</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
+    <img src="./images/chef.jpg" alt="Chef cooking on a frying pan with flames" width >
+    <h1>My Fav Recipes</h1>
+    <p>This website is made for the
+        <strong><a href="https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/recipes" target="_blank">recipes project</a></strong>
+        on The Odin Project.
+    </p>
+    <p>I kind know how to do this stuff already so I might just skim through :P</p>
     <ul>
         <li><a href="./recipes/dailymeal.html">My Daily Meal</a></li>
-        <li>I'm not adding anymore recipes I know how to do this stuff</li>
+        <li><a href="./recipes/pizza.html">Hawaiian Pizza</a></li>
+        <li><a href="./recipes/toast.html">Toast</a></li>
     </ul>
 </body>
 </html>
