--- a/recipes/dailymeal.html
+++ b/recipes/dailymeal.html
@@ -26,6 +26,7 @@
         <li>Take veges out when done, put rice in for 2 minutes</li>
         <li>When rice done, take out and put all together for meal yum and aweosme</li>
     </ol>
-    <p><a href="../index.html">Back</a></p>
+    
+    <p><a href="../index.html">Home</a></p>
 </body>
 </html>
